--- a/parkup1/app/src/main/res/values/strings.xml
+++ b/parkup1/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="allmeetings">All My Meetings</string>
     <string name="settings">Settings</string>
     <string name="logout">Log Out</string>
+    <string name="viewName">Meeting Name</string>
+    <string name="viewAddress">Address</string>
+    <string name="viewDescription">Description</string>
+    <string name="viewParticipants">View Participants</string>
+    <string name="viewDelete">Delete</string>
+    <string name="viewVerify">Verify Location</string>
 </resources>
